# codebase_rust

./: .gitignore  README.md
learn_macro/: README.md
learn_macro/derive-new/: Cargo.toml  README.md
learn_macro/macrorule/: Cargo.toml  README.md
learn_macro/procmacro/: Cargo.toml
learn_macro/recurrence/: README.md
learn_plus/: README.md
learn_primer/: Cargo.toml  README.md
learn_primer/l_async/: async01.rs  future01.rs  future_demo.rs  generator_demo.rs  yielder_demo.rs
learn_primer/l_basic/: enum_demo01.rs  enum_demo02.rs  enum_demo03_color.rs  exxpr_demo01.rs  fileio_demo.rs  loop_demo.rs  stdio_demo.rs  str_demo.rs  str_demo02.rs
learn_primer/l_closure/: closure_and_ownership.rs  closure_as_arg.rs  closure_as_ret.rs  closure_define.rs  closure_escape.rs
learn_primer/l_concurrency/: arc_demo.rs  atomic_demo01.rs  barrier_demo.rs  condvar_demo.rs  datarace_demo.rs  posion_and_deadlock.rs  rwlock_demo.rs  thread_api.rs
learn_primer/l_crate/: regex_demo01.rs
learn_primer/l_csp/: channel_demo01.rs  channel_demo02.rs
learn_primer/l_design_pattern/: builder_demo.rs  command_builder.rs
learn_primer/l_error_handle/: option_demo01.rs  option_map_demo.rs  panic_demo.rs  result_demo01.rs  result_demo02.rs  result_demo03.rs  unwrap_demo.rs
project_calc/: Cargo.toml  README.md
project_calc/crates/syntax/: Cargo.toml
project_calc/crates/syntax/src/: lexer.rs  lib.rs  parse.rs  visit.rs
project_calc/crates/tac/: Cargo.toml
project_calc/crates/vm/: Cargo.toml
project_calc/crates/vm/src/: isa.rs
project_calc/src/: main.rs
(+68 files in other folders)
