[[bin]]
name = "calc"
author = "StLeoX"

[package]
name = "calc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calc-syntax = {path = "crates/syntax"}
calc-tac = {path = "crates/tac"}
calc-vm = {path = "crates/vm"}

logos = "0.12.0"
clap = "3.0.0-beta.2"

[workspace]
members = [".", "./crates/*"]
